adding nav section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 02</title>
-</head>
-<body>
-    <header>
+    <!-- noto serif font -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+        <!-- inter font -->
+         <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+        <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/1b596c9d55.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="inter">
+    <header>
+        <nav>
+            <img src="images/logo.png" alt="comming soon">
+           
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a class="different" href="">Shop</a></li>
+                <li><a class="different" href="">About us</a></li>
+                <li><a href=""><i class="fa-solid fa-cart-plus"></i>Cart ($56)</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
