adding about section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
     </header>
 
     <main>
+        <section class="about">
+           <div class="about-description">
+             <h1 class="noto-serif">ALWAYS <span>FRESH FLOWERS</span></h1>
+            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+           </div>
+           <div>
+            <img src="images/hero-flower.png" alt="comming soon">
+           </div>
 
+        </section>
+
+        
     </main>
 
     <footer>
