add plants price section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,68 @@
 
         </section>
 
-        
+        <section class="plants-price">
+            <div class="plant-title">
+                <h2 class="noto-serif"><span>Our</span> Plants</h2>
+            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+
+            <div class="plants">
+                <div>
+                    <img src="images/sample-flower-image.png" alt="comming soon">
+                    <p class="title">Lily Blossom</p>
+                    <p class="price">20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="images/sample-flower-image.png" alt="comming soon">
+                    <p class="title">Lily Blossom</p>
+                    <p class="price">20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="images/sample-flower-image.png" alt="comming soon">
+                    <p class="title">Lily Blossom</p>
+                    <p class="price">20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="images/sample-flower-image.png" alt="comming soon">
+                    <p class="title">Lily Blossom</p>
+                    <p class="price">20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="images/sample-flower-image.png" alt="comming soon">
+                    <p class="title">Lily Blossom</p>
+                    <p class="price">20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="images/sample-flower-image.png" alt="comming soon">
+                    <p class="title">Lily Blossom</p>
+                    <p class="price">20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="images/sample-flower-image.png" alt="comming soon">
+                    <p class="title">Lily Blossom</p>
+                    <p class="price">20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+                <div>
+                    <img src="images/sample-flower-image.png" alt="comming soon">
+                    <p class="title">Lily Blossom</p>
+                    <p class="price">20 USD</p>
+                    <button>ADD TO CART</button>
+                </div>
+            </div>
+
+        </section>
+
+        <section>
+            
+        </section>
     </main>
 
     <footer>
