add join section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://kit.fontawesome.com/1b596c9d55.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body class="inter">
     <header>
@@ -125,7 +126,21 @@
 
         </section>
 
-        
+        <section class="latest-deals">
+            <h2><span>Latest</span>  Deals</h2>
+            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+        </section>
+
+        <section class="join">
+            <div class="join-item">
+                <h2 class="noto-serif">Join the colorful Bunch</h2>
+                <input type="email" name="" id="" placeholder="Write email" required>
+                <a href="#"><button>subscribe</button></a>
+            </div>
+
+        </section>
+
     </main>
 
     <footer>
